platform/sonarqube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: sonarqube

  namespace: sonarqube

  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/group.name: platform

spec:
  ingressClassName: alb

  rules:
    - host: sonarqube.rk-labs.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarqube-sonarqube
                port:
                  number: 9000
